<resources>

    <string name="app_name">Lolita</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_user">Hello user</string>
    <string name="john_doe">John Doe</string>
    <string name="display_name_text">Choose a display name</string>
    <string name="account_linked_with">Account linked with</string>
    <string name="john_doe_email">john.joe@gmail.com</string>
    <string name="add_location">Add a location</string>
    <string name="location_name">location name</string>
    <string name="location">location</string>
    <string name="Profile">Profile</string>
    <string name="Search">Search</string>
    <string name="Done">Done</string>
    <string name="Save_Location">Save Location</string>
    <string name="Category">Category</string>
    <string name="title_section3">Alarms</string>
    <string name="title_section2">Weather</string>
    <string name="title_section1">Appointments</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_reminders">Add Reminders</string>
    <string name="add_profiles">Add Profiles</string>
    <string name="add_friends">Add Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="virtual_assistant">Virtual Assistant</string>
    <string name="title_activity_va_list">Appointment List</string>
    <string name="title_activity_va_appointment_details">AppointmentDetails</string>
    <string name="title_activity_va_blank_appointment">Blank_appointment</string>
    <string name="title_activity_va_weather">Weather</string>
    <string name="title_activity_va_main">Virtual Assistant</string>
    <string name="title_activity_add_location">AddLocation</string>

    <string-array name="category_array">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string-array name="profile_array">
        <item>General</item>
        <item>Loud</item>
        <item>Silent</item>
    </string-array>

    <string name="title_activity_home_page">HomePageActivity</string>

</resources>